--- a/Projet1_Voisins/Projet1_Voisins.vcxproj
+++ b/Projet1_Voisins/Projet1_Voisins.vcxproj
@@ -128,6 +128,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Projet1_Voisins.cpp" />
+    <ClCompile Include="RessourceLoader.cpp" />
+    <ClCompile Include="Statistiques.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="RessourceLoader.h" />
+    <ClInclude Include="Statistiques.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
