--- a/Projet1_Voisins/Projet1_Voisins.vcxproj.filters
+++ b/Projet1_Voisins/Projet1_Voisins.vcxproj.filters
@@ -24,12 +24,21 @@
     <ClCompile Include="RessourceLoader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Liste.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Statistiques.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="RessourceLoader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Noeud.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Liste.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
